# tommyx-shell

./: .p10k.zsh  README.md  README.org  dev-bootstrap-linux.sh  push.sh  tommyx-shell.sh
iterm-config/: com.googlecode.iterm2.plist
legacy/: README.org
scripts/: -ai  -ai-agent-adapter  -aip  -airun  -airunedit  -cd  -data-repo-auto-sync  -du  -g  -git-all-amend-force-push  -git-all-commit-force-push  -git-all-commit-push  -git-edit-last-commit  -git-main-repo  -git-new-branch-from-current  -git-new-branch-from-master  -git-reset-branch-to-remote  -git-reset-local-branch-to-remote  -git-select-branch  -git-select-recent-branch  -git-worktrees-cleanup  -git-worktrees-dir  -macos-open-new-chrome-tab  -macos-restart-mos  -macos-run-terminal-cmd  -macos-switch-to-chrome-tab  -ntfy  -ntfy-script  -obsidian-add-reading-note  -obsidian-add-reading-note-from-todoist  -open-temp-markdown-file  -repo-status-check  -run-python-script  -run-tommyx-python-script  -zellij-main  -zellij-main-session-name
scripts/python/: data_repo_auto_sync.py  obsidian_add_reading_note.py  obsidian_add_reading_note_from_todoist.py  pyproject.toml  utils.py
scripts/python/tommyx/: __init__.py  data_repo_auto_sync.py  obsidian_add_reading_note.py  obsidian_add_reading_note_from_todoist.py
scripts/python/tommyx/utils/: __init__.py  ai.py  obsidian.py  web.py
scripts/python/utils/: obsidian.py  todoist.py  web.py
