[project]
name = "tommyx-shell-scripts-python"
version = "0.1.0"
description = "Tommyx shell scripts Python package"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bs4>=0.0.2",
    "claude-agent-sdk>=0.1.6",
    "litellm>=1.77.7",
    "openai>=2.2.0",
    "pydantic>=2.0.0",
    "requests>=2.32.5",
    "todoist-api-python>=3.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tommyx"]
